--- a/VAO/res/layout/activity_login.xml
+++ b/VAO/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     tools:context=".Main" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/txtEventTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
@@ -18,9 +18,10 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView1"
+        android:layout_alignTop="@+id/txtEventTitle"
         android:layout_marginLeft="30dp"
-        android:layout_toRightOf="@+id/textView1"
-        android:text="@string/btnLogin" />
+        android:layout_toRightOf="@+id/txtEventTitle"
+        android:text="@string/btnLogin"
+        android:onClick="openDetails" />
 
 </RelativeLayout>
