Login ui changes

--- a/VAO/res/layout/activity_login.xml
+++ b/VAO/res/layout/activity_login.xml
@@ -9,47 +9,29 @@
     tools:context=".Main" >
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/txtUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
+        android:hint="@string/placeHolderUsuario"
         android:ems="10" android:inputType="text">
 
         <requestFocus />
     </EditText>
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/txtPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/editText1"
+        android:layout_alignLeft="@+id/txtUsuario"
+        android:layout_below="@+id/txtUsuario"
         android:layout_marginTop="19dp"
         android:ems="10"
+        android:hint="@string/placeHolderPassword"
         android:inputType="textPassword" />
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="96dp"
-        android:contentDescription="@string/imglogo"
-        android:src="@drawable/ic_launcher" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignRight="@+id/editText1"
-        android:layout_below="@+id/editText2"
-        android:layout_marginTop="44dp"
-        android:onClick="openDetails"
-        android:text="@string/btnLogin" />
+    
 
     <Button
         android:id="@+id/button2"
@@ -59,6 +41,27 @@
         android:layout_alignRight="@+id/button1"
         android:layout_below="@+id/button1"
         android:layout_marginTop="20dp"
-        android:text="@string/btnLoginFB" /> 
+        android:text="@string/btnLoginFB" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="66dp"
+        android:contentDescription="@string/imglogo"
+        android:src="@drawable/ic_launcher" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/txtPassword"
+        android:layout_alignRight="@+id/txtPassword"
+        android:layout_below="@+id/txtPassword"
+        android:layout_marginTop="20dp"
+        android:onClick="openDetails"
+        android:text="@string/btnLogin" />
 
 </RelativeLayout>
