--- a/VAO/res/layout/main.xml
+++ b/VAO/res/layout/main.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+                xmlns:facebook="http://schemas.android.com/apk/res-auto" 
+			    xmlns:tools="http://schemas.android.com/tools"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:paddingBottom="@dimen/activity_vertical_margin"
+			    android:paddingLeft="@dimen/activity_horizontal_margin"
+			    android:paddingRight="@dimen/activity_horizontal_margin"
+			    android:paddingTop="@dimen/activity_vertical_margin"
+			    tools:context=".MainActivity" >
 
     <EditText
         android:id="@+id/txtUsuario"
@@ -34,15 +35,14 @@
     
 
     <Button
-        android:id="@+id/btnLoginFB"
+    	android:id="@+id/btnLoginFB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnLogin"
         android:layout_alignRight="@+id/btnLogin"
         android:layout_below="@+id/btnLogin"
         android:layout_marginTop="20dp"
-        android:onClick="doLoginFB"
-        android:text="@string/btnLoginFB" />
+        android:text="@string/btnLoginFB" /> 
 
     <ImageView
         android:id="@+id/imgLogo"
