--- a/VAO/res/layout/activity_event_list.xml
+++ b/VAO/res/layout/activity_event_list.xml
@@ -1,16 +1,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".EventList" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/eventListMessage" />
+        <LinearLayout
+            android:id="@+id/linlayEventDetailsIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:ignore="UselessParent" >
 
-</RelativeLayout>
+            <RelativeLayout
+            	android:id="@+id/rellayEventDetailsInfoIn"
+                android:layout_width="match_parent"
+                android:layout_height="70dp">
+       		    <TextView
+                    android:id="@+id/txtEventTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/searchTitle"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/listEventSearchResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linlayEventDetailsIn" >
+ 
+        </ListView>
+
+    </RelativeLayout>
