--- a/VAO/res/menu/event_list.xml
+++ b/VAO/res/menu/event_list.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    <item android:id="@+id/itemAddEvent" 
+        android:showAsAction="never"
+        android:title="@string/txtAddEvent" 
+        android:orderInCategory="99"></item>
+    
+ 
 </menu>
