--- a/VAO/res/menu/event_list.xml
+++ b/VAO/res/menu/event_list.xml
@@ -6,7 +6,7 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     <item android:id="@+id/itemAddEvent" 
-        android:showAsAction="never"
+        android:showAsAction="always"
         android:title="@string/txtAddEvent" 
         android:orderInCategory="99"></item>
     
