--- a/VAO/res/values/integers.xml
+++ b/VAO/res/values/integers.xml
@@ -5,4 +5,10 @@
         <item>2</item>
         <item>3</item>
     </integer-array>
+    <integer-array name="event_privacies_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </integer-array>
 </resources>
