--- a/VAO/res/layout/activity_event_creation_details.xml
+++ b/VAO/res/layout/activity_event_creation_details.xml
@@ -12,28 +12,27 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         tools:context=".EventCreationDetails" >
-
-        <ToggleButton
-            android:id="@+id/toggleButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:text="ToggleButton" />
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/toggleButton1"
-            android:layout_alignBottom="@+id/toggleButton1"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentStart="false"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_centerVertical="true"
             android:text="Compartir en facebook" />
+
+        <Spinner
+            android:id="@+id/spnEventPrivacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/textView1" />
+
     </RelativeLayout>
 
     <Spinner
