--- a/VAO/res/layout/activity_event_list.xml
+++ b/VAO/res/layout/activity_event_list.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView1"
+    android:id="@+id/scvwEventList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,33 +8,30 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <LinearLayout
-            android:id="@+id/linlayEventDetailsIn"
+    <LinearLayout
+        android:id="@+id/linlayEventListIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:id="@+id/rellayEventListInfo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            tools:ignore="UselessParent" >
+            android:layout_height="70dp" >
 
-            <RelativeLayout
-            	android:id="@+id/rellayEventDetailsInfoIn"
+            <TextView
+                android:id="@+id/txtEventListTitle"
                 android:layout_width="match_parent"
-                android:layout_height="70dp">
-       		    <TextView
-                    android:id="@+id/txtEventTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/searchTitle"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            </RelativeLayout>
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:text="@string/searchTitle"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </RelativeLayout>
 
         <ListView
             android:id="@+id/listEventSearchResult"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linlayEventDetailsIn" >
- 
+            android:layout_height="wrap_content" >
         </ListView>
+    </LinearLayout>
 
-    </RelativeLayout>
+</RelativeLayout>
